# cl-project

./: .gitignore  .travis.yml  LICENSE  README.markdown  cl-project-test.asd  cl-project.asd
hoge/: .gitignore  README.markdown  README.org  hoge-test.asd  hoge.asd
hoge/src/: main.lisp
hoge/tests/: main.lisp
roswell/: make-project  make-project.ros
skeleton/: .gitignore  Makefile.in  README.markdown  README.org  autogen.sh  compile.lisp  configure.ac  skeleton-test.asd  skeleton.asd
skeleton/src/: main.lisp  skeleton.lisp
skeleton/t/: skeleton.lisp
skeleton/tests/: main.lisp  skeleton.lisp
skeletons/default/: <% @var name %>.asd  <% @var test-name %>.asd  README
skeletons/default/<% @var test-dir %>/: <% @var package-filename %>.lisp
skeletons/default/<% @var test-dir %>/includes/: cl-test-more.lisp  fiveam.lisp
skeletons/default/includes/: README.markdown  README.org
src/: cl-project.lisp  file.lisp  git.lisp  interactive.lisp  io.lisp  middleware.lisp  package.lisp  processors.lisp  skeleton.lisp  specials.lisp
t/: cl-project.lisp
tests/: cl-project.lisp
